--- a/public/index.css
+++ b/public/index.css
@@ -1,7 +1,14 @@
+html,body {
+    width:100%;
+    height:100%;
+}
 .main {
     margin:50px auto;
     width:50%;
 }
 .share-btn {
     margin-right:10px;
+}
+#upload-progress {
+    transition: width 0.3s;
 }
