--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.0/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="/index.js"></script>
     <script>
         var files = JSON.parse(`<%- JSON.stringify(files) %>`)
@@ -50,10 +51,21 @@
                     </table>
                     <hr>
                     <h3>ファイルアップロード</h3>
-                    <form action="/upload" method="POST" enctype="multipart/form-data">
+                    <!-- <form action="/upload" method="POST" enctype="multipart/form-data">
                         <input type="file" name="file">
                         <button type="submit">送信</button>
-                    </form>
+                    </form> -->
+                    <div class="file-upload">
+                        <div class="progress">
+                            <div class="progress-bar" id="upload-progress" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <div class="upload-container">
+                            <div class="mb-3">
+                                <input class="form-control" type="file" id="file">
+                            </div>
+                            <button class="btn btn-primary" id="upload">送信</button>
+                        </div>
+                    </div>
               </div>
         </div>
     </div>
